@@ -1144,7 +1144,19 @@
  N043.23.54.000:E006.51.20.000:LFMD Points VFR:DR
  N043.35.09.000:E006.59.52.000:LFMD Points VFR:LC
  N043.45.00.000:E007.11.20.000:LFMD Points VFR:NA
-@@ -38647,12 +38317,12 @@
+@@ -38539,8 +38209,10 @@
+ N043.39.59.000:E004.35.15.000:LFME Points VFR:AL
+ N043.49.49.000:E004.38.00.000:LFME Points VFR:BC
+ N043.46.46.000:E004.11.41.000:LFME Points VFR:CA
+-N043.57.11.000:E004.25.26.000:LFME Points VFR:SN
++N043.57.10.000:E004.28.42.000:LFME Points VFR:CS
+ N043.40.55.000:E004.12.50.000:LFME Points VFR:AS
++N043.38.39.030:E004.25.56.800:LFME Points VFR:SG
++N043.41.24.900:E004.32.40.350:LFME Points VFR:PA
+ ;================================================= ~~ LFMM/LFMH/Gates ~~ =================================================;
+ N045.31.51.000:E004.17.43.200:LFMH Gates:1
+ N045.31.52.400:E004.17.43.100:LFMH Gates:2
+@@ -38647,12 +38319,12 @@
  N043.12.50.956:E002.18.08.892:LFMK Gates:P Aviation Generale
  N043.12.51.601:E002.18.03.589:LFMK Gates:P Helicoptere
  N043.12.50.171:E002.18.13.534:LFMK Gates:Hangars
@@ -1163,7 +1175,7 @@
  ;============================================== ~~ LFBB/LFMK/Points VFR ~~ ===============================================;
  N043.15.15.000:E002.10.39.000:LFMK Points VFR:WA
  N043.11.06.000:E002.33.22.000:LFMK Points VFR:ES
-@@ -38664,11 +38334,11 @@
+@@ -38664,11 +38336,11 @@
  N043.11.25.000:E002.08.31.000:LFMK Points VFR:WM
  N043.11.37.000:E002.03.18.000:LFMK Points VFR:WP
  ;=============================================== ~~ LFBB/LFMK/Taxiways ~~ ================================================;
@@ -1178,7 +1190,7 @@
  N043.12.54.828:E002.18.22.645:LFMK Taxiways:T3
  N043.12.54.969:E002.18.31.511:LFMK Taxiways:C
  N043.12.53.781:E002.18.34.946:LFMK Taxiways:T4
-@@ -39701,8 +39371,10 @@
+@@ -39701,8 +39373,10 @@
  N048.57.35.361:E002.26.39.115:LFPB Gates:F1
  N048.57.31.031:E002.26.35.814:LFPB Gates:F2
  N048.57.25.739:E002.26.32.880:LFPB Gates:I
@@ -1191,7 +1203,7 @@
  N048.57.11.065:E002.26.21.512:LFPB Gates:H1
  N048.57.08.900:E002.26.19.678:LFPB Gates:H2
  N048.57.06.615:E002.26.18.028:LFPB Gates:H3
-@@ -39717,6 +39389,15 @@
+@@ -39717,6 +39391,15 @@
  N048.57.23.574:E002.26.17.111:LFPB Gates:J
  N048.57.31.993:E002.26.23.162:LFPB Gates:F3
  N048.57.38.969:E002.26.27.746:LFPB Gates:E
@@ -1207,7 +1219,7 @@
  ;============================================== ~~ LFFF/LFPB/Points VFR ~~ ===============================================;
  N048.53.55.000:E002.33.26.000:LFPB Points VFR:E1
  N049.00.00.000:E002.11.06.000:LFPB Points VFR:W1
-@@ -39731,10 +39412,16 @@
+@@ -39731,10 +39414,16 @@
  N048.58.09.091:E002.26.50.979:LFPB Taxiways:B
  N048.58.04.608:E002.26.31.977:LFPB Taxiways:C4
  N048.57.59.820:E002.26.41.237:LFPB Taxiways:B
@@ -1225,7 +1237,7 @@
  N048.57.47.368:E002.25.32.200:LFPB Taxiways:A1
  N048.57.46.445:E002.25.18.869:LFPB Taxiways:A
  N048.57.48.054:E002.26.46.772:LFPB Taxiways:W5
-@@ -39747,29 +39434,48 @@
+@@ -39747,29 +39436,48 @@
  N048.57.38.089:E002.25.53.017:LFPB Taxiways:U3
  N048.57.38.520:E002.25.57.430:LFPB Taxiways:R
  N048.57.33.655:E002.25.54.895:LFPB Taxiways:A
@@ -1286,7 +1298,7 @@
  ;================================================= ~~ LFFF/LFPC/Gates ~~ =================================================;
  N049.15.07.100:E002.31.27.600:LFPC Gates:1
  N049.15.06.500:E002.31.25.600:LFPC Gates:2
-@@ -40854,10 +40560,10 @@
+@@ -40854,10 +40562,10 @@
  N048.44.50.768:E002.06.08.178:LFPN Taxiways:W2
  N048.44.50.114:E002.05.59.679:LFPN Taxiways:W3
  ;================================================= ~~ LFFF/LFPO/Gates ~~ =================================================;
@@ -1301,7 +1313,7 @@
  N048.43.56.717:E002.22.27.619:LFPO Gates:TERMINAL
  N048.43.57.552:E002.22.32.712:LFPO Gates:FRET
  N048.44.40.613:E002.22.26.818:LFPO Gates:HANGAR N2
-@@ -41579,9 +41285,12 @@
+@@ -41579,9 +41287,12 @@
  N047.33.42.989:W000.18.31.691:LFRJ Taxiways:C
  N047.33.33.490:W000.18.44.476:LFRJ Taxiways:S
  ;================================================= ~~ LFRR/LFRK/Gates ~~ =================================================;
@@ -1317,7 +1329,7 @@
  N049.10.53.814:W000.27.35.066:LFRK Gates:Parking Herbe
  N049.11.00.057:W000.27.34.632:LFRK Gates:Terminal
  N049.10.56.282:W000.27.26.554:LFRK Gates:TWR
-@@ -41596,40 +41305,6 @@
+@@ -41596,40 +41307,6 @@
  N049.04.41.000:W000.38.29.000:LFRK Points VFR:SW
  N049.11.37.000:W000.51.52.000:LFRK Points VFR:W
  ;=============================================== ~~ LFRR/LFRK/Taxiways ~~ ================================================;
@@ -1358,7 +1370,7 @@
  N049.10.48.454:W000.27.45.892:LFRK Taxiways:A1
  N049.10.55.431:W000.27.32.807:LFRK Taxiways:A
  N049.10.51.310:W000.27.31.005:LFRK Taxiways:H
-@@ -41637,8 +41312,23 @@
+@@ -41637,8 +41314,23 @@
  N049.10.40.844:W000.27.08.240:LFRK Taxiways:H
  N049.10.32.656:W000.26.53.764:LFRK Taxiways:H3
  N049.10.44.361:W000.27.19.379:LFRK Taxiways:H2
@@ -1384,7 +1396,7 @@
  ;================================================= ~~ LFRR/LFRN/AMSR ~~ ==================================================;
  N048.39.32.140:W002.19.22.003:LFRN AMSR:2000
  N048.17.02.140:W001.59.37.003:LFRN AMSR:2700
-@@ -42492,7 +42182,13 @@
+@@ -42492,7 +42184,13 @@
  N043.49.49.000:E004.38.00.000:LFTW Points VFR:BC
  N043.39.59.000:E004.35.15.000:LFTW Points VFR:AL
  N043.40.55.000:E004.12.50.000:LFTW Points VFR:AS
